--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -535,7 +535,7 @@
 		<span class="bg-elem bg-schoolfish-rb animated animated-scroll delay-1s slower" data-animateClass="fadeInRight"></span>
 	</section>
 
- 	<iframe src="http://docs.google.com/viewer?url=https://llao87.github.io/ivasi/img/test.pdf&embedded=true" width="600" height="780" style="border: none;"></iframe>
+ 	<iframe src="https://docs.google.com/viewer?url=https://llao87.github.io/ivasi/img/test.pdf&embedded=true" width="600" height="780" style="border: none;"></iframe>
 
 	<section class="shops">
 		<div class="container">
@@ -678,7 +678,7 @@
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="http://fancyapps.com/fancybox/source/jquery.fancybox.js"></script>
+	<script src="https://fancyapps.com/fancybox/source/jquery.fancybox.js"></script>
 	<script src="js/slick/slick.min.js"></script>
 	<script src="js/script.js"></script>
 
