full desktop main page

--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -25,53 +25,35 @@
 			</ul>
 		</div>
 
-		<div class="slider">
-			<div class="slide">
-				<img class="slide__image" src="img/slide-1.jpg" alt="">
+		<div class="slider-wrap">
+			<div class="slider">
+				<div class="slide">
+					<img class="slide__image" src="img/slide-1.jpg" alt="">
+				</div>
 
-				<div class="slide__title">
-					<div class="slide__header">Возвращаем иваси</div>
-					<!-- <div class="slide__subheader">традиции, качество, вкус</div> -->
+				<div class="slide">
+					<img class="slide__image" src="img/slide-2.jpg" alt="">
+				</div>
+
+				<div class="slide">
+					<img class="slide__image" src="img/slide-3.jpg" alt="">
+				</div>
+
+				<div class="slide">
+					<img class="slide__image" src="img/slide-2.jpg" alt="">
+				</div>
+
+				<div class="slide">
+					<img class="slide__image" src="img/slide-3.jpg" alt="">
 				</div>
 			</div>
 
-			<div class="slide">
-				<img class="slide__image" src="img/slide-2.jpg" alt="">
-
-				<div class="slide__title">
-					<div class="slide__header">Второй слайд</div>
-					<!-- <div class="slide__subheader">подзаголовок слайда</div> -->
-				</div>
-			</div>
-
-			<div class="slide">
-				<img class="slide__image" src="img/slide-3.jpg" alt="">
-
-				<div class="slide__title">
-					<div class="slide__header">Третий слайд</div>
-					<!-- <div class="slide__subheader">подзаголовок слайда</div> -->
-				</div>
-			</div>
-
-			<div class="slide">
-				<img class="slide__image" src="img/slide-2.jpg" alt="">
-
-				<div class="slide__title">
-					<div class="slide__header">Четвертый слайд</div>
-					<!-- <div class="slide__subheader">подзаголовок слайда</div> -->
-				</div>
-			</div>
-
-			<div class="slide">
-				<img class="slide__image" src="img/slide-3.jpg" alt="">
-
-				<div class="slide__title">
-					<div class="slide__header">Пятый слайд</div>
-					<!-- <div class="slide__subheader">подзаголовок слайда</div> -->
-				</div>
+			<div class="slide__title">
+				<div class="slide__header">Возвращаем иваси</div>
 			</div>
 		</div>
 	</header>
+
 
 	<section class="advantages">
 		<div class="container">
@@ -125,12 +107,13 @@
 
 				<div class="col-xl-12 next-section-wrap">
 					<a href="#">
-						<img src="img/arrow-next-section.png" class="animated bounce infinite slower">
+						<img src="img/arrow-next-section.svg" class="next-section animated pulse infinite slower">
 					</a>
 				</div>
 			</div>
 		</div>
 	</section>
+
 
 	<section class="promo">
 		<div class="container">
@@ -174,6 +157,7 @@
 		</div>
 	</section>
 
+
 	<section class="promo-nav">
 		<div class="container">
 			<div class="row promo-slider-nav-wrap">
@@ -212,7 +196,9 @@
 		</div>
 	</section>
 
+
 	<section class="wave-separator"></section>
+
 
 	<section class="recipes">
 		<div class="container">
@@ -318,7 +304,9 @@
 		</div>
 	</section>
 
+
 	<section class="wave-separator"></section>
+
 
 	<section class="comments">
 		<div class="container">
@@ -330,7 +318,10 @@
 				<div class="col-xl-12">
 					<div class="js-comments-slider animated animated-scroll slow" data-animateClass="fadeIn">
 						<div class="comment">
-							<div class="comment__text">Яркий насыщенный вкус. Есть кожура с одной стороны. Легко очищается от кожуры. Есть мелкие косточки, иногда даже не мелкие, но меня это не смущает. Вкусная сардина, буду брать ещё.</div>
+							<div class="comment__text-wrap">
+								<div class="comment__text">Яркий насыщенный вкус. Есть кожура с одной стороны. Легко очищается от кожуры. Есть мелкие косточки, иногда даже не мелкие, но меня это не смущает. Вкусная сардина, буду брать ещё.</div>
+								<a href="https://otzovik.com/review_8797580.html" class="comment__more">Читать целиком</a>
+							</div>
 
 							<div class="comment__author">
 								<div class="author__photo">
@@ -345,7 +336,10 @@
 						</div>
 
 						<div class="comment">
-							<div class="comment__text">Купила сегодня «иваси» филе холодного копчения, так как рыбу люблю и разбираюсь… угодить мне не так просто. Была приятно удивлена, насколько хороша рыбка. В меру соли, не сухая, легкий аромат копчения! Супер! Качество на пять с плюсом!</div>
+							<div class="comment__text-wrap">
+								<div class="comment__text">Купила сегодня «иваси» филе холодного копчения, так как рыбу люблю и разбираюсь… угодить мне не так просто. Была приятно удивлена, насколько хороша рыбка. В меру соли, не сухая, легкий аромат копчения! Супер! Качество на пять с плюсом!</div>
+								<a href="https://otzovik.com/review_8797580.html" class="comment__more">Читать целиком</a>
+							</div>
 
 							<div class="comment__author">
 								<div class="author__photo">
@@ -360,7 +354,10 @@
 						</div>
 
 						<div class="comment">
-							<div class="comment__text">Изумительно!!! Очень вкусная, малосолёная и не очень жирная рыбка! С копчёностью тоже всё в норме, в меру. Очень понравилась всей семье. Купила сначала две упаковки, оказалось мало. Ходила ещё покупать.</div>
+							<div class="comment__text-wrap">
+								<div class="comment__text">Изумительно!!! Очень вкусная, малосолёная и не очень жирная рыбка! С копчёностью тоже всё в норме, в меру. Очень понравилась всей семье. Купила сначала две упаковки, оказалось мало. Ходила ещё покупать.</div>
+								<a href="https://otzovik.com/review_8797580.html" class="comment__more">Читать целиком</a>
+							</div>
 
 							<div class="comment__author">
 								<div class="author__photo">
@@ -375,7 +372,10 @@
 						</div>
 
 						<div class="comment">
-							<div class="comment__text">Очень вкусная рыбка с подкопченным вкусом и приятным и естественным запахом дымка. В меру маслянистая, плотной структуры, с сохранённой кожицей. Не содержит костей. Вкус приятный, соленый и невероятно нежный. С чёрным хлебушком зашло на ура! Отличная закуска, буду покупать ещё…</div>
+							<div class="comment__text-wrap">
+								<div class="comment__text">Очень вкусная рыбка с подкопченным вкусом и приятным и естественным запахом дымка. В меру маслянистая, плотной структуры, с сохранённой кожицей. Не содержит костей. Вкус приятный, соленый и невероятно нежный. С чёрным хлебушком зашло на ура! Отличная закуска, буду покупать ещё…</div>
+								<a href="https://otzovik.com/review_8797580.html" class="comment__more">Читать целиком</a>
+							</div>
 
 							<div class="comment__author">
 								<div class="author__photo">
@@ -390,7 +390,10 @@
 						</div>
 
 						<div class="comment">
-							<div class="comment__text">Рыба вкусная, в меру соленая, жирная.</div>
+							<div class="comment__text-wrap">
+								<div class="comment__text">Рыба вкусная, в меру соленая, жирная.</div>
+								<a href="https://otzovik.com/review_8797580.html" class="comment__more">Читать целиком</a>
+							</div>
 
 							<div class="comment__author">
 								<div class="author__photo">
@@ -488,38 +491,46 @@
 				<div class="col-xl-12">
 					<div class="certificates-slider js-certificates-slider">
 						<div class="certificate">
-							<a class="fancybox" data-fancybox-type="iframe" href="img/test.pdf">
+							<a class="fancybox" data-fancybox-type="iframe" href="img/gab-5-41.pdf">
 								<div class="certificate__frame">
-									<div class="certificate__photo"></div>
+									<div class="certificate__photo">
+										<img src="img/gab-5-41.jpg" alt="">
+									</div>
 								</div>
-								<div class="certificate__title">Протоколы исследований РАН</div>
+								<div class="certificate__title">Иваси "Фирменная"</div>
 							</a>
 						</div>
 
 						<div class="certificate">
-							<a class="fancybox" data-fancybox-type="iframe" href="img/test.pdf">
+							<a class="fancybox" data-fancybox-type="iframe" href="img/gab-3-28.pdf">
 								<div class="certificate__frame">
-									<div class="certificate__photo"></div>
+									<div class="certificate__photo">
+										<img src="img/gab-3-28.jpg" alt="">
+									</div>
 								</div>
-								<div class="certificate__title">Экспертные оценки</div>
+								<div class="certificate__title">Иваси "Аппетитная"</div>
 							</a>
 						</div>
 
 						<div class="certificate">
-							<a class="fancybox" data-fancybox-type="iframe" href="img/test.pdf">
+							<a class="fancybox" data-fancybox-type="iframe" href="img/gab-5-41.pdf">
 								<div class="certificate__frame">
-									<div class="certificate__photo"></div>
+									<div class="certificate__photo">
+										<img src="img/gab-5-41.jpg" alt="">
+									</div>
 								</div>
-								<div class="certificate__title">Четвертый</div>
+								<div class="certificate__title">Иваси "Фирменная"</div>
 							</a>
 						</div>
 
 						<div class="certificate">
-							<a class="fancybox" data-fancybox-type="iframe" href="img/test.pdf">
+							<a class="fancybox" data-fancybox-type="iframe" href="img/gab-3-28.pdf">
 								<div class="certificate__frame">
-									<div class="certificate__photo"></div>
+									<div class="certificate__photo">
+										<img src="img/gab-3-28.jpg" alt="">
+									</div>
 								</div>
-								<div class="certificate__title">Cертификат соответствия</div>
+								<div class="certificate__title">Иваси "Аппетитная"</div>
 							</a>
 						</div>
 					</div>
@@ -535,7 +546,6 @@
 		<span class="bg-elem bg-schoolfish-rb animated animated-scroll delay-1s slower" data-animateClass="fadeInRight"></span>
 	</section>
 
- 	<iframe src="https://docs.google.com/viewer?url=https://llao87.github.io/ivasi/img/test.pdf&embedded=true" width="600" height="780" style="border: none;"></iframe>
 
 	<section class="shops">
 		<div class="container">
@@ -546,27 +556,63 @@
 
 				<div class="col-xl-12">
 					<div class="shops-list">
-						<a class="shop-link" href=""><img src="img/karusel.png" alt=""></a>
-						<a class="shop-link" href=""><img src="img/perekrestok.png" alt=""></a>
-						<a class="shop-link" href=""><img src="img/pyaterochka.png" alt=""></a>
-						<a class="shop-link" href=""><img src="img/magnit.png" alt=""></a>
-						<a class="shop-link" href=""><img src="img/diksi.png" alt=""></a>
-						<a class="shop-link" href=""><img src="img/pyaterochka.png" alt=""></a>
-						<a class="shop-link" href=""><img src="img/magnit.png" alt=""></a>
-						<a class="shop-link" href=""><img src="img/perekrestok.png" alt=""></a>
-						<a class="shop-link" href=""><img src="img/diksi.png" alt=""></a>
-						<a class="shop-link" href=""><img src="img/karusel.png" alt=""></a>
-						<a class="shop-link" href=""><img src="img/diksi.png" alt=""></a>
-						<a class="shop-link" href=""><img src="img/pyaterochka.png" alt=""></a>
-						<a class="shop-link" href=""><img src="img/magnit.png" alt=""></a>
-						<a class="shop-link" href=""><img src="img/karusel.png" alt=""></a>
-						<a class="shop-link" href=""><img src="img/perekrestok.png" alt=""></a>
+						<span class="shop-icon"><img src="img/karusel.png" alt=""></span>
+						<span class="shop-icon"><img src="img/perekrestok.png" alt=""></span>
+						<span class="shop-icon"><img src="img/pyaterochka.png" alt=""></span>
+						<span class="shop-icon"><img src="img/magnit.png" alt=""></span>
+						<span class="shop-icon"><img src="img/diksi.png" alt=""></span>
+
+						<span class="shop-icon" href=""><img src="img/ashan.png" alt=""></span>
+						<a class="shop-icon" href="http://atak.testeam.ru/">
+							<span>Онлайн</span>
+							<img src="img/atak.png" alt="">
+						</a>
+						<span class="shop-icon" href=""><img src="img/lenta.png" alt=""></span>
+						<span class="shop-icon" href=""><img src="img/metro.png" alt=""></span>
+						<a class="shop-icon" href="https://vkusvill.ru/">
+							<span>Онлайн</span>
+							<img src="img/vkuswille.png" alt="">
+						</a>
+
+						<a class="shop-icon" href="https://www.utkonos.ru/">
+							<span>Онлайн</span>
+							<img src="img/utkonos.png" alt="">
+						</a>
+						<span class="shop-icon" href=""><img src="img/globus.png" alt=""></span>
+						<a 	class="shop-icon" href="https://av.ru/">
+							<span>Онлайн</span>
+							<img src="img/azbuka.png" alt="">
+						</a>
+						<span class="shop-icon" href=""><img src="img/miratorg.png" alt=""></span>
+						<span class="shop-icon" href=""><img src="img/avmarket.png" alt=""></span>
+
+						<span class="shop-icon" href=""><img src="img/billa.png" alt=""></span>
+						<span class="shop-icon" href=""><img src="img/spar.png" alt=""></span>
+						<span class="shop-icon" href=""><img src="img/mariara.png" alt=""></span>
+						<span class="shop-icon" href=""><img src="img/vysliga.png" alt=""></span>
+						<span class="shop-icon" href=""><img src="img/tvoidom.png" alt=""></span>
+					</div>
+
+					<div class="shops-list--hidden js-shops-list">
+						<div class="shops-list">
+							<span class="shop-icon"><img src="img/deliveryone.png" alt=""></span>
+							<span class="shop-icon"><img src="img/rybset.png" alt=""></span>
+							<span class="shop-icon"><img src="img/ecomorie.png" alt=""></span>
+							<span class="shop-icon"><img src="img/ohotomorie.png" alt=""></span>
+							<span class="shop-icon"><img src="img/ikornyi.png" alt=""></span>
+
+							<span class="shop-icon shop-icon-final" href=""><img src="img/bahetle.png" alt=""></span>
+							<span class="shop-icon shop-icon-final" href=""><img src="img/mindal.png" alt=""></span>
+							<span class="shop-icon shop-icon-final" href=""><img src="img/slata.png" alt=""></span>
+							<span class="shop-icon shop-icon-final" href=""><img src="img/yabloko.png" alt=""></span>
+							<span class="shop-icon shop-icon-final" href=""><img src="img/rait.png" alt=""></span>
+						</div>
 					</div>
 				</div>
 			</div>
 
 			<div class="js-more-shops">
-				<div class="btn btn--orange btn--more-shops">Весь список</div>
+				<div class="btn btn--orange btn--more-shops js-more-shops">Весь список</div>
 			</div>
 		</div>
 	</section>
@@ -600,80 +646,7 @@
 	</footer>
 
 
-
 	<style>
-		.certificates {
-			background: rgb(146,206,212);
-			background: linear-gradient(0deg, rgba(146,206,212,1) 0%, rgba(209,232,235,1) 50%, rgba(255,255,255,1) 100%);
-			padding: 80px 0;
-			min-height: 827px;
-		}
-		.certificates .section-title {
-			margin-bottom: 60px;
-		}
-		.bg-schoolfish-lt {
-			background-image: url(img/school-lt.svg);
-			width: 166px;
-			height: 155px;
-			top: 17%;
-			left: 13%;
-		}
-		.bg-schoolfish-rt {
-			background-image: url(img/school-rt.svg);
-			width: 224px;
-			height: 83px;
-			top: 23%;
-			right: 7%;
-		}
-		.bg-schoolfish-lb {
-			background-image: url(img/school-lb.svg);
-			width: 198px;
-			height: 197px;
-			top: 64%;
-			left: 9%;
-		}
-		.bg-schoolfish-rb {
-			background-image: url(img/school-rb.svg);
-			width: 141px;
-			height: 164px;
-			top: 60%;
-			right: 13%;
-		}
-		.certificate {
-			text-align: center;
-		}
-		.certificate > a {
-			outline: none;
-			text-decoration: none;
-		}
-		.certificate__frame {
-			display: inline-block;
-			background-image: url(img/certifikat-frame.png);
-			background-position: center;
-			-webkit-background-size: cover;
-			background-size: cover;
-			background-repeat: no-repeat;
-			width: 237px;
-			height: 334px;
-			-moz-transition: all 0.6s ease-out;
-			-o-transition: all 0.6s ease-out;
-			-webkit-transition: all 0.6s ease-out;
-			transition: all 0.6s ease-out;
-			margin-top: 59px;
-			margin-bottom: 45px;
-		}
-		.certificate.slick-current .certificate__frame {
-			width: 278px;
-			height: 393px;
-			margin-top: 0;
-		}
-		.certificate__title {
-			text-align: center;
-			color: #01336e;
-			font-family: "Open Sans Condensed";
-			font-size: 2.2em;
-			font-weight: 700;
-		}
 	</style>
 
 
@@ -681,16 +654,5 @@
 	<script src="https://fancyapps.com/fancybox/source/jquery.fancybox.js"></script>
 	<script src="js/slick/slick.min.js"></script>
 	<script src="js/script.js"></script>
-
-
-	<script>
-		$(".fancybox").fancybox({
-			openEffect  : 'none',
-			closeEffect : 'none',
-			iframe : {
-				preload: false
-			}
-		});
-	</script>
 </body>
 </html>
