--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -55,7 +55,7 @@
 	</header>
 
 
-	<section class="advantages">
+	<div class="advantages">
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-12">
@@ -112,10 +112,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 
 
-	<section class="promo">
+	<div class="promo">
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-12">
@@ -155,10 +155,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 
 
-	<section class="promo-nav">
+	<div class="promo-nav">
 		<div class="container">
 			<div class="row promo-slider-nav-wrap">
 				<div class="col-xl-10 col-xl-offset-1">
@@ -194,13 +194,13 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 
 
-	<section class="wave-separator"></section>
+	<div class="wave-separator"></div>
 
 
-	<section class="recipes">
+	<div class="recipes">
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-12">
@@ -302,13 +302,13 @@
 			<div class="trava animated animated-scroll delay-0-8s slower" data-animateClass='fadeInDown'></div>
 			<div class="svekla animated animated-scroll delay-0-8s slower" data-animateClass='fadeInRight'></div>
 		</div>
-	</section>
+	</div>
 
 
-	<section class="wave-separator"></section>
+	<div class="wave-separator"></div>
 
 
-	<section class="comments">
+	<div class="comments">
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-12">
@@ -415,10 +415,10 @@
 			<div class="quote quote-up   animated animated-scroll delay0-8s slower" data-animateClass="fadeInLeft"></div>
 			<div class="quote quote-down animated animated-scroll delay0-8s slower" data-animateClass="fadeInRight"></div>
 		</div>
-	</section>
+	</div>
 
 
-	<section class="faq">
+	<div class="faq">
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-12">
@@ -474,13 +474,13 @@
 		<span class="bg-elem bg-fish-big animated animated-scroll slower" 	data-animateClass="fadeInRight"></span>
 		<span class="bg-elem bg-fish-small animated animated-scroll slower" 	data-animateClass="fadeInLeft"></span>
 		<span class="bg-elem bg-ship animated animated-scroll slower" 		data-animateClass="fadeInLeft"></span>
-	</section>
+	</div>
 
 
-	<section class="wave-separator"></section>
+	<div class="wave-separator"></div>
 
 
-	<section class="certificates">
+	<div class="certificates">
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-12">
@@ -544,10 +544,10 @@
 		<span class="bg-elem bg-schoolfish-rt animated animated-scroll delay-1s slower" data-animateClass="fadeInRight"></span>
 		<span class="bg-elem bg-schoolfish-lb animated animated-scroll delay-1s slower" data-animateClass="fadeInLeft"></span>
 		<span class="bg-elem bg-schoolfish-rb animated animated-scroll delay-1s slower" data-animateClass="fadeInRight"></span>
-	</section>
+	</div>
 
 
-	<section class="shops">
+	<div class="shops">
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-12">
@@ -583,14 +583,14 @@
 							<span>Онлайн</span>
 							<img src="img/azbuka.png" alt="">
 						</a>
-						<span class="shop-icon" href=""><img src="img/miratorg.png" alt=""></span>
-						<span class="shop-icon" href=""><img src="img/avmarket.png" alt=""></span>
+						<span class="shop-icon"><img src="img/miratorg.png" alt=""></span>
+						<span class="shop-icon"><img src="img/avmarket.png" alt=""></span>
 
-						<span class="shop-icon" href=""><img src="img/billa.png" alt=""></span>
-						<span class="shop-icon" href=""><img src="img/spar.png" alt=""></span>
-						<span class="shop-icon" href=""><img src="img/mariara.png" alt=""></span>
-						<span class="shop-icon" href=""><img src="img/vysliga.png" alt=""></span>
-						<span class="shop-icon" href=""><img src="img/tvoidom.png" alt=""></span>
+						<span class="shop-icon"><img src="img/billa.png" alt=""></span>
+						<span class="shop-icon"><img src="img/spar.png" alt=""></span>
+						<span class="shop-icon"><img src="img/mariara.png" alt=""></span>
+						<span class="shop-icon"><img src="img/vysliga.png" alt=""></span>
+						<span class="shop-icon"><img src="img/tvoidom.png" alt=""></span>
 					</div>
 
 					<div class="shops-list--hidden js-shops-list">
@@ -615,10 +615,10 @@
 				<div class="btn btn--orange btn--more-shops js-more-shops">Весь список</div>
 			</div>
 		</div>
-	</section>
+	</div>
 
 
-	<section class="wave-separator"></section>
+	<div class="wave-separator"></div>
 
 
 	<footer>
