--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -59,7 +59,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-12">
-					<img class="advantages__fish animated fadeInRight delay-0-8s slower" src="img/advantages-fish.svg">
+					<img class="advantages__fish animated fadeInRight delay-0-8s slower" src="img/advantages-fish.svg" alt="Большая Иваси">
 				</div>
 
 				<div class="col-xl-12">
@@ -107,7 +107,7 @@
 
 				<div class="col-xl-12 next-section-wrap">
 					<a href="#">
-						<img src="img/arrow-next-section.svg" class="next-section animated pulse infinite slower">
+						<img src="img/arrow-next-section.svg" class="next-section animated pulse infinite slower" alt="Переход к разделу ниже">
 					</a>
 				</div>
 			</div>
@@ -451,11 +451,11 @@
 							<div class="fishing">
 								<img class="fishing-map" src="img/fishing-places.svg" alt="Карта промысла">
 
-								<img class="fishing-point fishing-point-1 animated animated-scroll slow" src="img/fishing-point.svg" data-animateClass="fadeInUp">
-								<img class="fishing-point fishing-point-2 animated animated-scroll delay-0-5s slow" src="img/fishing-point.svg" data-animateClass="fadeInUp">
-								<img class="fishing-point fishing-point-3 animated animated-scroll delay-1s slow" src="img/fishing-point.svg" data-animateClass="fadeInUp">
-								<img class="fishing-point fishing-point-4 animated animated-scroll delay-1-5s slow" src="img/fishing-point.svg" data-animateClass="fadeInUp">
-								<img class="fishing-point fishing-point-5 animated animated-scroll delay-2s slow" src="img/fishing-point.svg" data-animateClass="fadeInUp">
+								<img class="fishing-point fishing-point-1 animated animated-scroll slow" src="img/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
+								<img class="fishing-point fishing-point-2 animated animated-scroll delay-0-5s slow" src="img/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
+								<img class="fishing-point fishing-point-3 animated animated-scroll delay-1s slow" src="img/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
+								<img class="fishing-point fishing-point-4 animated animated-scroll delay-1-5s slow" src="img/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
+								<img class="fishing-point fishing-point-5 animated animated-scroll delay-2s slow" src="img/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
 							</div>
 						</div>
 
@@ -562,13 +562,13 @@
 						<span class="shop-icon"><img src="img/magnit.png" alt=""></span>
 						<span class="shop-icon"><img src="img/diksi.png" alt=""></span>
 
-						<span class="shop-icon" href=""><img src="img/ashan.png" alt=""></span>
+						<span class="shop-icon"><img src="img/ashan.png" alt=""></span>
 						<a class="shop-icon" href="http://atak.testeam.ru/">
 							<span>Онлайн</span>
 							<img src="img/atak.png" alt="">
 						</a>
-						<span class="shop-icon" href=""><img src="img/lenta.png" alt=""></span>
-						<span class="shop-icon" href=""><img src="img/metro.png" alt=""></span>
+						<span class="shop-icon"><img src="img/lenta.png" alt=""></span>
+						<span class="shop-icon"><img src="img/metro.png" alt=""></span>
 						<a class="shop-icon" href="https://vkusvill.ru/">
 							<span>Онлайн</span>
 							<img src="img/vkuswille.png" alt="">
@@ -578,7 +578,7 @@
 							<span>Онлайн</span>
 							<img src="img/utkonos.png" alt="">
 						</a>
-						<span class="shop-icon" href=""><img src="img/globus.png" alt=""></span>
+						<span class="shop-icon"><img src="img/globus.png" alt=""></span>
 						<a 	class="shop-icon" href="https://av.ru/">
 							<span>Онлайн</span>
 							<img src="img/azbuka.png" alt="">
@@ -601,11 +601,11 @@
 							<span class="shop-icon"><img src="img/ohotomorie.png" alt=""></span>
 							<span class="shop-icon"><img src="img/ikornyi.png" alt=""></span>
 
-							<span class="shop-icon shop-icon-final" href=""><img src="img/bahetle.png" alt=""></span>
-							<span class="shop-icon shop-icon-final" href=""><img src="img/mindal.png" alt=""></span>
-							<span class="shop-icon shop-icon-final" href=""><img src="img/slata.png" alt=""></span>
-							<span class="shop-icon shop-icon-final" href=""><img src="img/yabloko.png" alt=""></span>
-							<span class="shop-icon shop-icon-final" href=""><img src="img/rait.png" alt=""></span>
+							<span class="shop-icon shop-icon-final"><img src="img/bahetle.png" alt=""></span>
+							<span class="shop-icon shop-icon-final"><img src="img/mindal.png" alt=""></span>
+							<span class="shop-icon shop-icon-final"><img src="img/slata.png" alt=""></span>
+							<span class="shop-icon shop-icon-final"><img src="img/yabloko.png" alt=""></span>
+							<span class="shop-icon shop-icon-final"><img src="img/rait.png" alt=""></span>
 						</div>
 					</div>
 				</div>
@@ -644,10 +644,6 @@
 
 		<span class="bg-elem bg-footer-ship animated animated-scroll delay-0-5s slower" data-animateClass="fadeInRight"></span>
 	</footer>
-
-
-	<style>
-	</style>
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
